# ffmpeg_dnx_with_vcpkg

./: .gitignore  CMakeLists.txt  ffmpeg_encode_dnx.bat  main.cpp
